# spherical-dmri-conv

./: .buildinfo  .dockerignore  .gitignore  LICENSE  README.md  environment.yml  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg  setup.py  test.py  trainer.py
.github/workflows/: ci.yml  docker-publish.yml
_sources/: index.rst.txt
_sources/autoapi/: index.rst.txt
autoapi/: index.html
autoapi/autoencoder/: index.html
autoapi/convolution/: index.html
autoapi/loss/: index.html
autoapi/transform/: index.html
autoapi/utils/: index.html
configs/: README.md  concrete_autoencoder.yaml  data_mudi.yaml  fcn_decoder.yaml  hcp_concrete_autoencoder.yaml  hcp_data.yaml  hcp_fcn_decoder.yaml  hcp_spherical_decoder.yaml  hcp_spherical_decoder_2.yaml  mudi_concrete_autoencoder.yaml  mudi_data.yaml  mudi_delimit_decoder.yaml  mudi_fcn_decoder.yaml  mudi_spherical_decoder.yaml  spherical_decoder.yaml  trainer.yaml
data/: README.md
docker/: Dockerfile  docker-compose.yml  wsl_start.ps1
docker/mlflow/: Dockerfile
docker/trainer/: Dockerfile
docs/: requirements.txt
docs/source/: conf.py  index.rst  refs.bib
notebooks/: concrete_autoencoder_keras.ipynb  concrete_autoencoder_pytorch.ipynb  data_preprocessing.ipynb  latent_features.txt  model-analysis.ipynb  project_path.py  spherical_decoder.ipynb
notebooks/.ipynb_checkpoints/: concrete_autoencoder_keras-checkpoint.ipynb  concrete_autoencoder_pytorch-checkpoint.ipynb  (+2 more)
tests/: test_spherical_transform.py
utils/: dataset.py  env.py  logger.py
(+46 files in other folders)
