[metadata]
name = mudi
version = 22.02.dev0
author = Maarten de Klerk
description = Concrete autoencoder for sub-sampling multi-dimensional dMRI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GewoonMaarten/spherical-dmri-conv
classifiers = 
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Development Status :: 2 - Pre-Alpha
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Medical Science Apps
    Typing :: Typed
    Environment :: GPU :: NVIDIA CUDA :: 11.1
project_urls =
    "Bug Tracker" = https://github.com/GewoonMaarten/spherical-dmri-conv/issues

[options]
package = find:
package_dir = 
    =src
python_requires = >=3.8
install_requires = 
    boto3
    dipy
    e3nn
    GPy
    h5py
    jsonargparse[signatures]
    mlflow==1.22.0
    nibabel
    nilearn
    numpy
    pandas
    psutil
    pyquaternion
    pytorch-lightning~=1.5.9
    sklearn
    torch~=1.10.0
    torchvision

[options.extras_require]
dev = 
    black
    build
    isort
    pytest
    setuptools
    sphinx
    sphinx-autoapi
    sphinx-book-theme
    sphinxcontrib-bibtex
    jupyter-sphinx
notebook = 
    bokeh
    jupyter_bokeh
    jupyterlab
    matplotlib
    seaborn

[options.packages.find]
where = src
